Consolidate donation handling through a single entrypoint